test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/subscript_both_pointers.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[31]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(10)
  ;
  int
  *
  identifier(ptr)
  =
  &
  identifier(x)
  ;
  int
  *
  identifier(subscript)
  =
  const int(0)
  ;
  return
  identifier(ptr)
  [
  identifier(subscript)
  ]
  ;
  }
